--- a/Projets/Projet P5 -  Flask/Flask/templates/home.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/home.html
@@ -13,6 +13,7 @@
 
 <body>
     <h1 class="title">{{message}}</h1>
+    <a href="{{url_for('secondPage')}}">Allez sur la seconde page</a>
 </body>
 
 </html>
