--- a/Projets/Projet P5 -  Flask/Flask/static/main.css
+++ b/Projets/Projet P5 -  Flask/Flask/static/main.css
@@ -7,3 +7,71 @@
     text-align: center;
     color: black
 }
+
+a {
+    padding: 4px;
+    margin: 4px;
+}
+
+form {
+    background-color: #FAFAFA;
+    padding: 10px;
+    width: 280px;
+    margin-top: 5px;
+}
+
+fieldset {
+    padding: 0 20px 20px 20px;
+    margin-bottom: 10px;
+    border: 1px solid #2115ca;
+}
+
+legend {
+    color: #1114d8;
+    font-weight: bold
+}
+
+label {
+    margin: 10px;
+    display: inline-block;
+}
+
+label.inline {
+    display: inline;
+    margin-right: 50px;
+}
+
+input,
+select,
+option {
+    background-color: #f3f5ff;
+}
+
+input,
+select {
+    padding: 3px;
+    border: 1px solid #F5C5C5;
+    border-radius: 5px;
+    width: 200px;
+    box-shadow: 1px 1px 2px #C0C0C0 inset;
+}
+
+select {
+    margin-top: 10px;
+}
+
+input[type=radio] {
+    background-color: transparent;
+    border: none;
+    width: 10px;
+    margin: 5px;
+}
+
+input[type=submit],
+input[type=reset] {
+    text-align: center;
+    width: 100px;
+    margin-top: 5px;
+    box-shadow: 1px 1px 1px #D83F3D;
+    cursor: pointer;
+}
