--- a/Projets/Projet P5 -  Flask/Flask/static/main.css
+++ b/Projets/Projet P5 -  Flask/Flask/static/main.css
@@ -75,3 +75,8 @@ input[type=reset] {
     box-shadow: 1px 1px 1px #D83F3D;
     cursor: pointer;
 }
+
+table {
+    border-radius: 1px;
+    border: #2115ca;
+}
