--- a/Projets/Projet P5 -  Flask/Flask/templates/home.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/home.html
@@ -14,6 +14,7 @@
     <h1 class="title">{{message}}</h1>
     <a href="{{url_for('secondPage')}}">Allez sur la seconde page</a>
     <a href="{{url_for('register')}}">Tester le formulaire</a>
+    <a href="{{url_for('users')}}">Utilisateurs Inscrits</a>
 
 </body>
 
