--- a/Projets/Projet P5 -  Flask/Flask/templates/test_formulaire.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/test_formulaire.html
@@ -12,6 +12,7 @@
 <body>
 
     <h2>{{message}}</h2>
+    <a href="{{url_for('hello')}}">Home</a>
 
     <form action="{{ url_for('register') }}" method="POST">
         <fieldset enabled>
