--- a/Projets/Projet P5 -  Flask/Flask/templates/second_page.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/second_page.html
@@ -15,7 +15,7 @@
     <h2> Bienvenue sur la seconde page</h2>
 
     <p class="second"> Pour revenir sur la page d'accueil
-        <a href="{{url_for('hello')}}"> Cliquez sur ce lien</a> Ouais, au cours de mes recherches sur la page principale, j'avais vu qu'on pouvait saisir un point d'interrogation. Mais ta capture d'écran semble montrer qu'ensuite VSC est censé proposer
+        <a href="{{url_for('home')}}"> Cliquez sur ce lien</a> Ouais, au cours de mes recherches sur la page principale, j'avais vu qu'on pouvait saisir un point d'interrogation. Mais ta capture d'écran semble montrer qu'ensuite VSC est censé proposer
         plusieurs choix (et tu dis de sélectionner le premier). Mais dans mon cas, si je saisis un point d'interrogation, aucun choix n'est affiché.
     </p>
 </body>
