--- a/Projets/Projet P5 -  Flask/Flask/templates/test_formulaire.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/test_formulaire.html
@@ -12,8 +12,8 @@
 <body>
 
     <div>
-        <h3>{{message}}</h3>
-        <a href="{{url_for('hello')}}">Accueil</a>
+        <h5>{{message}}</h5>
+        <a href="{{url_for('home')}}">Accueil</a>
     </div>
 
     <div>
