--- a/Projets/Projet P5 -  Flask/Flask/templates/home.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/home.html
@@ -19,11 +19,15 @@
             <li><a href="{{url_for('register')}}">Form</a></li>
             <li><a href="{{url_for('users')}}">Users</a></li>
             <li><a href="{{url_for('fileForm')}}">Stats</a></li>
-            <li><a href="{{url_for('secondPage')}}">About</a></li>
+            <li><a href="{{url_for('imageForm')}}">MnistForm</a></li>
             <li class="push"><a href="#">{{message}}</a></li>
 
         </ul>
     </nav>
+    <main>
+        <h1>Bienvenue sur mon Flask Application !</h1>
+        <img class="image" src="https://i1.wp.com/mydigitalweek.com/wp-content/uploads/2019/10/IA-.png?fit=674%2C419&ssl=1" alt="Machine Learning">
+    </main>
 
 </body>
 
