--- a/Projets/Projet P5 -  Flask/Flask/static/main.css
+++ b/Projets/Projet P5 -  Flask/Flask/static/main.css
@@ -51,7 +51,7 @@ legend {
 label {
     margin: 10px;
     display: inline-block;
-    color: aliceblue;
+    color: blue;
 }
 
 label.inline {
@@ -122,7 +122,7 @@ ul {
 
 li {
     border-right: 1px solid #bbb;
-    text-transform: uppercase;
+    text-transform: capitalize;
 }
 
 li:last-child {
@@ -139,10 +139,6 @@ li a {
 
 li a:hover {
     background-color: #111;
-}
-
-.active {
-    background-color: #04AA6D;
 }
 
 a {
@@ -165,4 +161,15 @@ a {
 .push {
     margin-left: auto;
     padding: 3px;
+}
+
+.image {
+    width: 100%;
+    margin-top: 5px;
+}
+
+.table {
+    text-align: center;
+    justify-content: center;
+    column-span: all;
 }
