flask_projet5_update

--- a/Projets/Projet P5 -  Flask/Flask/templates/users.html
+++ b/Projets/Projet P5 -  Flask/Flask/templates/users.html
@@ -17,7 +17,7 @@
         <a href="{{url_for('home')}}">Accueil</a>
     </div>
     <div>
-        <table class="list" style="text-align: right;">
+        <table class="list" style="text-align: center;">
             <thead>
                 <th>Prénom</th>
                 <th>Nom</th>
