--- a/Projets/Projet P5 -  Flask/Flask/static/main.css
+++ b/Projets/Projet P5 -  Flask/Flask/static/main.css
@@ -40,7 +40,7 @@ form {
 fieldset {
     padding: 0 20px 20px 20px;
     margin-bottom: 10px;
-    border: 1px solid #2115ca;
+    border: 1px solid rgb(97, 119, 204);
 }
 
 legend {
@@ -51,7 +51,7 @@ legend {
 label {
     margin: 10px;
     display: inline-block;
-    color: blue;
+    color: rgb(97, 119, 204);
 }
 
 label.inline {
@@ -72,6 +72,8 @@ select {
     border-radius: 5px;
     width: 200px;
     box-shadow: 1px 1px 2px #C0C0C0 inset;
+    margin:2px;
+    padding:2px;
 }
 
 select {
@@ -103,12 +105,17 @@ div {
 /* UTILISATEURS INSCRITS*/
 
 .list {
-    border: 0.5rem solid #2115ca;
-    border-width: thick;
-    text-align: center;
-    column-width: auto;
+    border-style: ridge;  
+    border-width: 150px; 
+    border-color: rgb(97, 119, 204); 
+}
+th {
+    border:5px solid rgb(97, 119, 204);
 }
 
+td{
+    border:20px solid rgb(97, 119, 204);
+}
 
 /* HOMEPAGE */
 
